# agentSchool

./: .gitignore  DIRECTORY_STRUCTURE.md  README.md  onPuahScript.sh  requirements.txt  rolling-ball.html  setup.bat  setup.sh
agents/agent-team-system/: .gitignore  README.md  pyproject.toml
agents/agent-team-system/docs/: ISSUES_AND_FIXES.md  RALPH_LOOP_DESIGN.md  RUNTIME.md  TODO.md
agents/agent-team-system/docs/phase1/: AGENT_FRAMEWORK_DESIGN.md  AGENT_ROLES_DESIGN.md  DOCUMENT_HUB_DESIGN.md  PHASE1_COMPLETION_SUMMARY.md  PHASE1_FINAL_REPORT.md  PHASE1_STATUS_SUMMARY.md  PHASE1_TEST_REPORT.md  REQUEST_BOARD_DESIGN.md
agents/agent-team-system/docs/phase2/: PHASE2_COMPLETION.md  PHASE2_DESIGN.md
agents/agent-team-system/docs/phase3/: PHASE3_DESIGN.md  PHASE3_REVIEW.md
agents/agent-team-system/docs/phase4/: PHASE4_DESIGN.md  PHASE4_FINAL_TEST_REPORT.md  PHASE4_REVIEW.md  PHASE4_REVIEW_2.md  PHASE4_TEST_PLAN.md  PHASE4_TEST_REPORT.md
agents/agent-team-system/docs/phase5/: PHASE5_DESIGN.md  PHASE5_DESIGN_REVIEW.md  PHASE5_DETAILED_DESIGN.md
agents/agent-team-system/docs/skills/: README.md  module_development_skill.md  phase3_development_sop.md
agents/agent-team-system/examples/: team_building_example.py  team_runner_example.py  workflow_example.py
agents/agent-team-system/src/agent/: __init__.py  base.py  config.py  handler.py  memory.py  state.py  (+3 more)
agents/agent-team-system/tests/: test_framework.py  test_integration.py  test_opencode_integration.py  test_phase2_roles.py  test_phase3_deep.py  test_phase3_team.py  test_phase4_real.py  test_phase4_workflow.py
(+377 files in other folders)
